--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,6 +1,9 @@
 {
+  "AppSettings": {
+    "Token":  "super secret key" //simple only for demonstration purpose 
+  },
   "ConnectionStrings": {
-    "DefaultConnection":  "Data Source=DatingApp.db"
+    "DefaultConnection": "Data Source=DatingApp.db"
   },
   "Logging": {
     "LogLevel": {
